logs/cinemaflix.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/blessings'...
Listing './lib/python3.5/site-packages/blessings-1.6.1.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cinemaflix'...
Compiling './lib/python3.5/site-packages/cinemaflix/cli.py'...
***   File "./lib/python3.5/site-packages/cinemaflix/cli.py", line 19
    print '\nExiting...'
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cinemaflix/main.py'...
***   File "./lib/python3.5/site-packages/cinemaflix/main.py", line 22
    print u'{} {} {} {}'.format(index, title, size, seeds)
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cinemaflix/providers'...
Compiling './lib/python3.5/site-packages/cinemaflix/providers/eztv.py'...
***   File "./lib/python3.5/site-packages/cinemaflix/providers/eztv.py", line 115
    print 'Show Not Found'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cinemaflix/utils'...
Listing './lib/python3.5/site-packages/cinemaflix-3.0.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/inquirer'...
Listing './lib/python3.5/site-packages/inquirer/render'...
Listing './lib/python3.5/site-packages/inquirer/render/console'...
Listing './lib/python3.5/site-packages/inquirer-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/readchar'...
Listing './lib/python3.5/site-packages/readchar-0.7.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/sabertooth'...
Compiling './lib/python3.5/site-packages/sabertooth/cli.py'...
***   File "./lib/python3.5/site-packages/sabertooth/cli.py", line 37
    print output
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sabertooth/providers'...
Compiling './lib/python3.5/site-packages/sabertooth/providers/opensubtitles.py'...
***   File "./lib/python3.5/site-packages/sabertooth/providers/opensubtitles.py", line 49
    print "Login Error"
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sabertooth-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/__init__.py'...
Listing './lib/python3.5/site-packages/tests/acceptance'...
Listing './lib/python3.5/site-packages/tests/integration'...
Listing './lib/python3.5/site-packages/tests/integration/console_render'...
Listing './lib/python3.5/site-packages/tests/unit'...
Listing './lib/python3.5/site-packages/torrentutils'...
Listing './lib/python3.5/site-packages/torrentutils-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
